src/less/players.less
@import (reference) "core.less"; // Import Core as a reference

// #region Shared Player Control

div[data-syiro-component="player-control"]{
    float: left;
    width: 100%; // Scales to width of video player if necessary
    background-color: @syiroSecondaryColor;

    &[data-syiro-component-streamstyling]{ // If we are applying "Stream Styling" to the Player Control
        height: 50px !important; // Set height to 50px
        max-height: 50px !important; // Enforce the height of 50px

        & > input { // Input Slider
            display: none; // Default to not showing
        }
    }

    &:not([data-syiro-component-streamstyling]){ // If we are NOT applying "Stream Styling" to the Player Control
        height: 60px !important; // Set height to 50px
        max-height: 60px !important; // Enforce the height of 60px

        & > input { // Input Slider
            display: block; // Default to showing
        }

        & > time { // Time Label tweaks for NON-Streaming Styling
            height: 50px;
            width: auto;
            line-height: 50px;
            margin: 0 10px 0 10px;
        }
    }

    & > div[data-syiro-component="button"][data-syiro-component-type="basic"]{ // Custom LESS for Basic Button Components inside Player Control
        float: left;
        height: 32px;
        width: 32px;
        min-width: 0 !important; // Override Basic Button minimum width
        background-color: @syiroSecondaryColor;
        border: 2px solid fadeout(contrast(@syiroSecondaryColor), 25%); // Set the border color to the contrastic color of the Syiro Secondary Color and slightly faded to make the border less bold
        border-radius: 32px; // Make the buttons "circular"
        margin: 7px 5px 7px 5px !important; // Center on Player Control

        &:not(:first-of-type){ // If the button is the last one
            float: right; // Float to the right of the Player Control
        }

        &[data-syiro-component-status="true"]{ // When the button is active
            background-color: @syiroPrimaryColor;
            border: 2px solid @syiroPrimaryColor;
        }

        &[data-syiro-minor-component="player-button-play"]{ // Play Button
            background-image : url("img/play.png"); // Set the background-image to img/play.png
            background-repeat: no-repeat;
            background-position: center center;
        }

        &[data-syiro-minor-component="player-button-volume"]{ // Volume Button
            background-image : url("img/volume.png"); // Set the background-image to img/volume.png
            background-repeat: no-repeat;
            background-position: center center;
        }

        &[data-syiro-minor-component="player-button-fullscreen"]{ // Fullscreen Button
            background-image : url("img/fullscreen.png"); // Set the background-image to img/fullscreen.png
            background-repeat: no-repeat;
            background-position: center center;
            background-size: 18px;
        }

        &[data-syiro-minor-component="player-button-menu"]{ // Menu Button
            float: right; // Ensure it floats to the right
            background-image : url("img/menu-inverted.png"); // Set the background-image to use the inverted menu image
            background-repeat: no-repeat;
            background-position: center center;
        }
    }

    // #region Our "slider" / input range

    & > input[type="range"]{

        // #region Range "Track"

        .trackProperties(){
            -moz-appearance: none !important; // No Firefox styling
            -webkit-appearance: none !important; // No WebKit styling
            float: left;
            height: 10px !important;
            width: 100% !important; // Have it fill the entire player-control top
            background-color: @syiroBackground;
            border: 0; // No border
            outline: 0;
            margin: 0 !important;
            padding: 0 !important;
        }

        &::-moz-range-track { // Firefox
            .trackProperties;
        }

        &::-ms-track{ // Internet Explorer
            .trackProperties; // Import the trackProperties
        }

        .trackProperties; // Place in input[type="range"] for Chrome

        // #endregion

        // #region Range Thumb

        .thumbProperties(){
            -moz-appearance: none !important; // No Firefox appearance
            -webkit-appearance: none !important; // No WebKit appearance

            height: 10px !important;
            width: 10px !important;
            border: 0 !important;
            background-color: darken(@syiroPrimaryColor, 10%) !important; // Have the thumb be slightly darker to allow differentation compared to the primary color
            background-image: none; // Mozilla applies an SVG image as the thumbnail. Lets remove that.
            border-radius: 0; // No border radius
        }

        &::-moz-range-thumb { // Firefox "Thumb" Styling
            .thumbProperties; // Import Thumb Styling
        }

        &::-ms-thumb { // Internet Explorer "Thumb" Styling
            .thumbProperties; // Import Thumb Styling
        }

        &::-webkit-slider-thumb{ // Chrome "Thumb" Styling
            .thumbProperties; // Import Thumb Styling
        }

        // #endregion
    }

    // #endregion

    // #region Label Time Information

    & > time {
        float: left;
        color: contrast(@syiroSecondaryColor); // Set the color to the contrasting color of the Syiro Secondary Color
        font-size: 14px;

        &[data-syiro-component-live]{ // Live "View"
            height: 12px;
            width: 12px;
            text-indent: 18px;
            line-height: 12px;
            background-color: #ff1212;
            border-radius: 16px;
            margin: 19px 10px 0 10px;
        }
    }
}

// #endregion

// #region Player Error Dialog (Codec)

div[data-syiro-minor-component="player-error"]{
    float: left;
    height: 40px; // Set to 40px, which is exactly two lines of text at 20px line-height
    color: contrast(@syiroSecondaryColor); // Set the color to the contrasting color of the Syiro Secondary Color
    text-align: center;
    line-height: 20px;
    background-color: @syiroSecondaryColor;
    margin: 0;
    padding: 0;
    position: absolute;
    z-index: 4; // Force above all content in the Audio Player or Video Player
    visibility: hidden; // Default to not being visible
    left: 0; // Force to left
}

// #endregion

// #region Player Menu Dialog

div[data-syiro-minor-component="player-menu"]{
    float: left;
    color: contrast(@syiroSecondaryColor); // Set the color to the contrasting color of the Syiro Secondary Color
    background-color: fade(@syiroSecondaryColor, 80%); // Set the background color to the Syiro Secondary Color, faded (transparency) to 80%
    margin: 0;
    padding: 0;
    position: absolute;
    z-index: 6; // Force above the video and video poster
    visibility: hidden; // Default to not being visible
    left: 0; // Force to left

    & > label { // Menu Dialog Label
        float: left;
        height: 50px;
        width: 100%;
        font-size: 22px;
        text-indent: 10px;
        line-height: 50px;
    }

    & > div[data-syiro-component="list"]{ // Menu Dialog List
        float: left;
        height: auto;
        width: 90%;
        font-size: 18px !important;

        & > div[data-syiro-component="list-item"] {
            cursor: pointer; // Make it obvious that the items are interactable
            margin-bottom: 5px; // Ensure there is enough space between List Items
        }
    }
}

// #region Audio Player

div[data-syiro-component="audio-player"]{
    float: left;
    height: auto;
    min-height: 50px; // Minimum height of player is the Player Control
    max-height: 160px; // Maximum height of player is the Player Control and Player Information
    background-color: @syiroBackground;

    & > audio {
        display: hidden; // Hide the audio player
    }

    & > div[data-syiro-minor-component="player-menu"]{ // Menu Dialog within Audio Player
        & > div[data-syiro-component="list"] > div[data-syiro-component="list-item"] { // Inner List Items
            width: 40px; // Set width to 40px
            margin-left: 10px; // Ensure the List Item has enough space between the icons and is aligned with the Menu label

            & > img { // If there is an image within the List Item
                height: 32px !important; // Reduce the height of the image
                width: 32px !important; // Reduce the width of the image
                margin: 4px 0 0 0; // Ensure the img looks good in the Audio Player's Menu Dialog "Grid View"
            }

            & > label { // Labels within List Items
                display: none; // Hide the list item
            }
        }
    }

    & > div[data-syiro-minor-component="player-information"]{ // Information in the Audio Player like cover art
        & > img { // Cover Art
            float: left;
            height: 100px;
            width: 100px;
        }

        & > section { // Song Information
            float: left;
            height: 100px;

            & > b,label {
                float: left;
                height: 28px;
                width: 100%; // Fill up entire "row"
            }

            & > b {
                color: @syiroPrimaryColor; // Primary color to differentiate from other content
                font-size: 16px;
                font-weight: normal; // No font-weight
            }

            & > label {
                color: contrast(@syiroBackground); // Ensure the text is readable by making it contrast the @syiroBackground
                font-size: 14px; // Slightly smaller than song title
            }
        }
    }
}

// #endregion

// #region Video Player

div[data-syiro-component="video-player"]{
    float: left;
    background-color: black; // Set the Video Player Component to have a black background to match video letterboxing color

    &:-webkit-full-screen{ // Webkit Fullscreen
        height: 100% !important;
        width: 100% !important;
        margin: 0 !important;
    }

    & > div[data-syiro-minor-component="player-menu"] > div[data-syiro-component="list"] > div[data-syiro-component="list-item"]{
        & > img { // If there is an image within the List Item
            height: 32px !important; // Reduce the height of the image
            width: 32px !important; // Reduce the width of the image
            margin: 4px 5px 0 10px; // Make sure the image is properly aligned with the Menu label and label text
        }
    }

    & > img[data-syiro-minor-component="video-poster"]{ // Video Poster
        float: left;
        margin: 0;
        padding: 0;
        position: absolute;
        z-index: 5; // Force above the video
        left: 0; // Force to left
    }

    & > video { // Inner video
        float: left;
        height: 100%; // 100% height of the Player Component
        width: 100%; // 100% width of Player Component
        background-color: black; // Set background color of video to black in the event it doesn't have the proper aspect ratio, to make any letterboxing less jarring

        &:focus { // When the video is focused, typically on right-click, disable the border / outline
            border: 0;
            outline: 0;
        }
    }


    & > div[data-syiro-component="player-control"] { // Overrides for Video Player's Player Control
        position: relative;
        z-index: 6; // Force above video poster

        &[data-syiro-component-streamstyling]{ // If we are applying "Stream Styling" to the Player Control
            bottom: 50px; // Ensure the Player Control is on the bottom edge of the Video Player
        }

        &:not([data-syiro-component-streamstyling]){
            bottom: 60px; // Ensure the Player Control is on the bottom edge of the Video Player
        }

    }
}

// #endregion

